# DataScienceProjects

./: README.md
Default-Prediction/: README.md  pyproject.toml
Default-Prediction/notebooks/: Credit_risk_project.ipynb
Fraud-Prediction/: .gitignore  README.md  pyproject.toml
Fraud-Prediction/docs/csvs/baseline/: threshold_eval.csv
Fraud-Prediction/mlruns/639845368115827160/: meta.yaml
Fraud-Prediction/mlruns/639845368115827160/1d36d63b885d4cea9cc7e2dc28fd4546/: meta.yaml
Fraud-Prediction/mlruns/639845368115827160/2e5b000135544500b32257c2c4df8d37/: meta.yaml
Fraud-Prediction/mlruns/639845368115827160/41524112bbc64017847d3c6d57b68d88/: meta.yaml
Fraud-Prediction/mlruns/639845368115827160/432b4ac8e5994103af31f468b8fe8035/: meta.yaml
Fraud-Prediction/mlruns/639845368115827160/888980a3182545af8f49cc7a9deebad3/: meta.yaml
Fraud-Prediction/mlruns/639845368115827160/9a73b2726c434b4d946f397b36c47903/: meta.yaml
Fraud-Prediction/mlruns/639845368115827160/bbec8833b2824638bb881398f5deaab8/: meta.yaml
Fraud-Prediction/mlruns/639845368115827160/de5d20269ce04d4d9fd8049c7ed86b04/: meta.yaml
Fraud-Prediction/mlruns/639845368115827160/e13ca246447a4c7a849235d3be3743ff/: meta.yaml
Fraud-Prediction/mlruns/639845368115827160/eb74d83290ab45518eb1f17e2875f759/: meta.yaml
Fraud-Prediction/notebooks/: fraud_project.ipynb
SentimentClassification/: README.md  main.py  pyproject.toml
SentimentClassification/notebooks/: sentiment_classification_analysis.ipynb
SentimentClassification/src/: extract_data.py
(+121 files in other folders)
