[project]
name = "default-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "scikit-optimize>=0.10.2",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
]
