[project]
name = "fraud-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "imbalanced-learn ==0.11.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "missingno>=0.5.2",
    "mlflow>=3.1.1",
    "numpy>=1.24,<2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "scikit-learn ==1.3.2",
    "scikit-optimize>=0.10.2",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "xgboost>=3.0.2",
]
