[project]
name = "sentimentclassification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imblearn>=0.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pip>=25.2",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "wordcloud>=1.9.4",
]
